--- a/WPC.Dottor.BlazorNet9/WPC.Dottor.BlazorNet9.Client/Pages/CheckRenderMode.razor
+++ b/WPC.Dottor.BlazorNet9/WPC.Dottor.BlazorNet9.Client/Pages/CheckRenderMode.razor
@@ -13,7 +13,7 @@
     Assigned RenderMode:
     @if(AssignedRenderMode is null)
     {
-        <strong>Static</strong>
+        <strong>Static server-side</strong>
     }
     else if (AssignedRenderMode == RenderMode.InteractiveServer)
     {
@@ -30,5 +30,9 @@
 </p>
 
 @code {
-
+    protected override void OnInitialized()
+    {
+        // only for testing purposes
+        Thread.Sleep(4000);
+    }
 }
