Rename namespace WPC.Dottor.BlazorNet9 to Dottor.BlazorNet9
Updated namespace across multiple files:
- Renamed `WPC.Dottor.BlazorNet9` to `Dottor.BlazorNet9`.
- Updated `using` directives in all relevant files.
- Modified `@using` directives in `_Imports.razor`.
- Changed `@layout` directive in `ManageLayout.razor`.
- Updated stylesheet reference in `App.razor`.
- Adjusted `ApplicationDbContext` and `ApplicationUser` classes.
- Updated migration files to use the new namespace.
- Modified `Program.cs` to reflect the namespace change.

--- a/WPC.Dottor.BlazorNet9/WPC.Dottor.BlazorNet9/Components/Account/Pages/Manage/ExternalLogins.razor
+++ b/WPC.Dottor.BlazorNet9/WPC.Dottor.BlazorNet9/Components/Account/Pages/Manage/ExternalLogins.razor
@@ -2,7 +2,7 @@
 
 @using Microsoft.AspNetCore.Authentication
 @using Microsoft.AspNetCore.Identity
-@using WPC.Dottor.BlazorNet9.Data
+@using Dottor.BlazorNet9.Data
 
 @inject UserManager<ApplicationUser> UserManager
 @inject SignInManager<ApplicationUser> SignInManager
