--- a/WPC.Dottor.BlazorNet9/WPC.Dottor.BlazorNet9/Components/Account/Pages/_Imports.razor
+++ b/WPC.Dottor.BlazorNet9/WPC.Dottor.BlazorNet9/Components/Account/Pages/_Imports.razor
@@ -1,2 +1,2 @@
-﻿@using WPC.Dottor.BlazorNet9.Components.Account.Shared
+﻿@using Dottor.BlazorNet9.Components.Account.Shared
 @attribute [ExcludeFromInteractiveRouting]
