--- a/WPC.Dottor.BlazorNet9/WPC.Dottor.BlazorNet9/Components/_Imports.razor
+++ b/WPC.Dottor.BlazorNet9/WPC.Dottor.BlazorNet9/Components/_Imports.razor
@@ -7,7 +7,7 @@
 @using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
-@using WPC.Dottor.BlazorNet9
-@using WPC.Dottor.BlazorNet9.Client
-@using WPC.Dottor.BlazorNet9.Client.Components
-@using WPC.Dottor.BlazorNet9.Components
+@using Dottor.BlazorNet9
+@using Dottor.BlazorNet9.Client
+@using Dottor.BlazorNet9.Client.Components
+@using Dottor.BlazorNet9.Components
