--- a/WPC.Dottor.BlazorNet9/WPC.Dottor.BlazorNet9.Client/_Imports.razor
+++ b/WPC.Dottor.BlazorNet9/WPC.Dottor.BlazorNet9.Client/_Imports.razor
@@ -7,4 +7,4 @@
 @using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
-@using WPC.Dottor.BlazorNet9.Client
+@using Dottor.BlazorNet9.Client
