--- a/WPC.Dottor.BlazorNet9/WPC.Dottor.BlazorNet9/Components/Account/Pages/ConfirmEmail.razor
+++ b/WPC.Dottor.BlazorNet9/WPC.Dottor.BlazorNet9/Components/Account/Pages/ConfirmEmail.razor
@@ -3,7 +3,7 @@
 @using System.Text
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.AspNetCore.WebUtilities
-@using WPC.Dottor.BlazorNet9.Data
+@using Dottor.BlazorNet9.Data
 
 @inject UserManager<ApplicationUser> UserManager
 @inject IdentityRedirectManager RedirectManager
