--- a/WPC.Dottor.BlazorNet9/WPC.Dottor.BlazorNet9/Components/Account/Pages/ExternalLogin.razor
+++ b/WPC.Dottor.BlazorNet9/WPC.Dottor.BlazorNet9/Components/Account/Pages/ExternalLogin.razor
@@ -6,7 +6,7 @@
 @using System.Text.Encodings.Web
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.AspNetCore.WebUtilities
-@using WPC.Dottor.BlazorNet9.Data
+@using Dottor.BlazorNet9.Data
 
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
