--- a/WPC.Dottor.BlazorNet9/WPC.Dottor.BlazorNet9/Components/Account/Pages/Manage/EnableAuthenticator.razor
+++ b/WPC.Dottor.BlazorNet9/WPC.Dottor.BlazorNet9/Components/Account/Pages/Manage/EnableAuthenticator.razor
@@ -5,7 +5,7 @@
 @using System.Text
 @using System.Text.Encodings.Web
 @using Microsoft.AspNetCore.Identity
-@using WPC.Dottor.BlazorNet9.Data
+@using Dottor.BlazorNet9.Data
 
 @inject UserManager<ApplicationUser> UserManager
 @inject IdentityUserAccessor UserAccessor
