--- a/WPC.Dottor.BlazorNet9/WPC.Dottor.BlazorNet9/Components/Account/Pages/Register.razor
+++ b/WPC.Dottor.BlazorNet9/WPC.Dottor.BlazorNet9/Components/Account/Pages/Register.razor
@@ -5,7 +5,7 @@
 @using System.Text.Encodings.Web
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.AspNetCore.WebUtilities
-@using WPC.Dottor.BlazorNet9.Data
+@using Dottor.BlazorNet9.Data
 
 @inject UserManager<ApplicationUser> UserManager
 @inject IUserStore<ApplicationUser> UserStore
