--- a/WPC.Dottor.BlazorNet9/WPC.Dottor.BlazorNet9/Components/Account/Shared/ExternalLoginPicker.razor
+++ b/WPC.Dottor.BlazorNet9/WPC.Dottor.BlazorNet9/Components/Account/Shared/ExternalLoginPicker.razor
@@ -1,6 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Authentication
 @using Microsoft.AspNetCore.Identity
-@using WPC.Dottor.BlazorNet9.Data
+@using Dottor.BlazorNet9.Data
 
 @inject SignInManager<ApplicationUser> SignInManager
 @inject IdentityRedirectManager RedirectManager
