--- a/WPC.Dottor.BlazorNet9/WPC.Dottor.BlazorNet9/Components/Account/Shared/ManageLayout.razor
+++ b/WPC.Dottor.BlazorNet9/WPC.Dottor.BlazorNet9/Components/Account/Shared/ManageLayout.razor
@@ -1,5 +1,5 @@
 ﻿@inherits LayoutComponentBase
-@layout WPC.Dottor.BlazorNet9.Components.Layout.MainLayout
+@layout Dottor.BlazorNet9.Components.Layout.MainLayout
 
 <h1>Manage your account</h1>
 
